--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@babel/preset-react": "^7.14.5",
         "react": "^17.0.2",
+        "react-datepicker": "^4.1.1",
         "react-dom": "^17.0.2",
         "react-icomoon": "^2.3.5",
         "styled-components": "^5.3.0"
