--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-datepicker": "^4.1.1",
         "react-dom": "^17.0.2",
         "react-icomoon": "^2.3.5",
+        "react-router-dom": "^5.2.0",
         "styled-components": "^5.3.0"
     }
 }
