--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@babel/preset-react": "^7.14.5",
+        "framer-motion": "^4.1.17",
         "react": "^17.0.2",
         "react-datepicker": "^4.1.1",
         "react-dom": "^17.0.2",
