--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # The following redirect is intended for use with most SPA's that handles routing internally.
 
 [[redirects]]
-  from = "/invoice"
+  from = "/*"
    to = "/index.html"
   status = 301
   force = false
