--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,4 @@
 # The following redirect is intended for use with most SPA's that handles routing internally.
 
 [[redirects]]
-  from = "/*"
-   to = "/index.html"
-  status = 200
-  force = false
-  query = {id = ":id"}
+/invoice id=:id  /invoice/:id  301
